# lammps-precon-opt-fix

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
.github/: CI_SETUP.md
.github/workflows/: ci.yml
cmake/: FindEigen3.cmake  FindLAMMPS.cmake
scripts/: generate_reference_data.py
src/: fix_precon_lbfgs.cpp  fix_precon_lbfgs.h  plugin.cpp  precon_exp.cpp  precon_exp.h
tests/: CMakeLists.txt  main.cpp  test_lammps_neighbor.cpp  test_mu_estimate.cpp  test_precon_assembly.cpp  test_precon_lbfgs_integration.cpp  test_precon_matrix_direct.cpp  test_sparse_solver.cpp
tests/fixtures/: test_atoms.cpp  test_atoms.h
tests/lammps/: test_auto_mu.lam  test_auto_mu_large.lam  test_defect_auto_mu.lam  test_defect_hardcoded_mu.lam  test_fixed.lam  test_identity.lam  test_precon.lam
tests/linesearch_debug/: calling_sequence.lam  convergence_exp.lam  convergence_test.lam  debug.lam  debug_test.py  full_debug.lam  parameter_sweep.py  quick_test.py  test_c1_0.0001_maxstep_0.005_exp.lam  test_c1_0.0001_maxstep_0.005_identity.lam  test_c1_0.0001_maxstep_0.01_exp.lam  test_c1_0.0001_maxstep_0.01_identity.lam  test_c1_0.0001_maxstep_0.02_exp.lam  test_c1_0.0001_maxstep_0.02_identity.lam  test_c1_0.0001_maxstep_0.04_exp.lam  test_c1_0.0001_maxstep_0.04_identity.lam  test_c1_0.0001_ms_0.01_identity.lam  test_c1_0.0001_ms_0.02_identity.lam  test_c1_0.0001_ms_0.04_identity.lam  test_c1_0.001_maxstep_0.005_exp.lam  test_c1_0.001_maxstep_0.005_identity.lam  test_c1_0.001_maxstep_0.01_exp.lam  test_c1_0.001_maxstep_0.01_identity.lam  test_c1_0.001_maxstep_0.02_exp.lam  test_c1_0.001_maxstep_0.02_identity.lam  test_c1_0.001_maxstep_0.04_exp.lam  test_c1_0.001_maxstep_0.04_identity.lam  test_c1_0.001_ms_0.01_identity.lam  test_c1_0.001_ms_0.02_identity.lam  test_c1_0.001_ms_0.04_identity.lam  test_c1_0.01_maxstep_0.005_exp.lam  test_c1_0.01_maxstep_0.005_identity.lam  test_c1_0.01_maxstep_0.01_exp.lam  test_c1_0.01_maxstep_0.01_identity.lam  test_c1_0.01_maxstep_0.02_exp.lam  test_c1_0.01_maxstep_0.02_identity.lam  test_c1_0.01_maxstep_0.04_exp.lam  test_c1_0.01_maxstep_0.04_identity.lam  test_c1_0.01_ms_0.01_identity.lam  test_c1_0.01_ms_0.02_identity.lam  (+21 more)
tests/validation/: ase_debug.py  ase_reference.py  ase_trajectory.json  atoms.data  compare_convergence.py  compare_trajectories.py  convergence_comparison.py  convergence_data.json  full_convergence_comparison.py  full_convergence_data.json  lammps_comparison_atoms.data  lammps_exp.lam  lammps_exp_atoms.data  lammps_identity.lam  lammps_trajectory.dump  lammps_trajectory.json  lammps_validation.lam  parse_lammps_trajectory.py  run_validation.sh  verify_initial.py  write_lammps_data.py
